generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

// ===== DEALER =====
model Dealer {
  id        Int      @id @default(autoincrement())
  name      String
  address   String
  city      String
  phone     String
  whatsapp  String
  email     String
  lat       Float
  lng       Float
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  hours     DealerHours?
}

model DealerHours {
  id        Int    @id @default(autoincrement())
  weekday   String
  saturday  String
  sunday    String
  dealer    Dealer @relation(fields: [dealerId], references: [id])
  dealerId  Int    @unique
}

// ===== CARS =====
model Car {
  id         Int      @id @default(autoincrement())
  slug       String   @unique
  name       String
  tagline    String
  category   String
  thumbnail  String
  isNew      Boolean  @default(false)
  isElectric Boolean  @default(false)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  images     CarImage[]
  variants   CarVariant[]
  highlights CarHighlight[]
}

model CarImage {
  id    Int    @id @default(autoincrement())
  url   String
  alt   String
  type  String
  order Int    @default(0)
  car   Car    @relation(fields: [carId], references: [id], onDelete: Cascade)
  carId Int
}

model CarHighlight {
  id    Int    @id @default(autoincrement())
  text  String
  order Int    @default(0)
  car   Car    @relation(fields: [carId], references: [id], onDelete: Cascade)
  carId Int
}

model CarVariant {
  id           Int    @id @default(autoincrement())
  name         String
  price        BigInt @default(0)
  transmission String
  order        Int    @default(0)
  car          Car    @relation(fields: [carId], references: [id], onDelete: Cascade)
  carId        Int

  specs        CarVariantSpec?
}

model CarVariantSpec {
  id           Int     @id @default(autoincrement())
  engine       String
  transmission String
  power        String
  torque       String
  fuelType     String
  seats        Int
  drivetrain   String?

  dimLength    Int?
  dimWidth     Int?
  dimHeight    Int?
  dimWheelbase Int?

  batteryCapacity String?
  batteryType     String?
  rangeElectric   String?
  rangeHybrid     String?
  chargingAc      String?
  chargingDc      String?

  features  Json @default("[]")

  variant   CarVariant @relation(fields: [variantId], references: [id], onDelete: Cascade)
  variantId Int        @unique
}

// ===== LEADS =====
model Lead {
  id            Int      @id @default(autoincrement())
  name          String
  phone         String
  email         String?
  carInterest   String?
  type          String
  preferredDate String?
  message       String?  @db.Text
  status        String   @default("new")
  createdAt     DateTime @default(now())
}